fix: corrigindo layout_width de elementos que tem constraints definidos por completas no eixo x (start e end) e adicionando ao campo de senha a propriedade de esconder os caracteres digitados pelo usuário

--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -56,11 +56,11 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tiEmail"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="55dp"
+        android:layout_marginStart="35dp"
         android:layout_marginTop="30dp"
-        android:layout_marginEnd="55dp"
+        android:layout_marginEnd="35dp"
         android:hint="@string/hint_email"
         app:boxCornerRadiusBottomEnd="10dp"
         app:boxCornerRadiusBottomStart="10dp"
@@ -82,10 +82,10 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/tiPassword"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="55dp"
-        android:layout_marginEnd="55dp"
+        android:layout_marginStart="35dp"
+        android:layout_marginEnd="35dp"
         android:hint="@string/password"
         app:boxCornerRadiusBottomEnd="10dp"
         app:boxCornerRadiusBottomStart="10dp"
@@ -96,12 +96,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tiEmail"
-        app:startIconDrawable="@drawable/ic_lock">
+        app:startIconDrawable="@drawable/ic_lock"
+        >
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/inputPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="textPassword"
              />
     </com.google.android.material.textfield.TextInputLayout>
 
