feat: Criando classe SignUpFragment e colocando imagem do App na tela de cadastro

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -17,8 +17,8 @@
 
     <fragment
         android:id="@+id/signUpFragment"
-        android:name="br.com.passwordkeeper.presenter.ui.fragment.LoginFragment"
-        android:label="LoginFragment"
+        android:name="br.com.passwordkeeper.presenter.ui.fragment.SignUpFragment"
+        android:label="SignUpFragment"
         tools:layout="@layout/sign_up_fragment"/>
 
 
