--- a/app/src/main/res/layout/sign_up_fragment.xml
+++ b/app/src/main/res/layout/sign_up_fragment.xml
@@ -31,6 +31,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/buttonBack" />
 
+    <ImageView
+        android:id="@+id/imageViewSignUp"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:contentDescription="@string/image_description"
+        android:src="@drawable/ic_app"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tvSignUpTitle"
+        android:layout_marginEnd="50dp" />
+
     <TextView
         android:id="@+id/tvSignUpSubtitle"
         android:layout_width="0dp"
