--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/loginFragment"
-        android:name="br.com.passwordkeeper.presenter.ui.fragment.LoginFragment"
+        android:name="br.com.passwordkeeper.presentation.ui.fragment.LoginFragment"
         android:label="LoginFragment"
         tools:layout="@layout/login_fragment">
         <action
@@ -21,7 +21,7 @@
 
     <fragment
         android:id="@+id/signUpFragment"
-        android:name="br.com.passwordkeeper.presenter.ui.fragment.SignUpFragment"
+        android:name="br.com.passwordkeeper.presentation.ui.fragment.SignUpFragment"
         android:label="SignUpFragment"
         tools:layout="@layout/sign_up_fragment">
         <action
@@ -34,7 +34,7 @@
     </fragment>
     <fragment
         android:id="@+id/signUpCongratsFragment"
-        android:name="br.com.passwordkeeper.presenter.ui.fragment.SignUpCongratsFragment"
+        android:name="br.com.passwordkeeper.presentation.ui.fragment.SignUpCongratsFragment"
         android:label="SignUpCongratsFragment"
         tools:layout="@layout/sign_up_congrats_fragment"/>
 
