feat: criando recyclerview para types

--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="25dp"
         android:layout_marginTop="50dp"
         android:fontFamily="@font/inter_light"
-        android:text="Hello, "
+        android:text="@string/hello"
         android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintTop_toTopOf="parent"
@@ -26,8 +26,9 @@
         android:layout_height="0dp"
         android:textColor="@color/white"
         android:fontFamily="@font/inter_bold"
-        android:textSize="24dp"
+        android:textSize="24sp"
         tools:text="Francis!"
+        android:textFontWeight="700"
         android:layout_marginTop="50dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="@id/textViewHello"/>
@@ -38,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/inter_bold"
-        android:text="Advice of moment =)"
+        android:text="@string/advice_of_moment"
         android:textColor="@color/white"
         android:textSize="16sp"
         android:layout_marginStart="25dp"
@@ -52,7 +53,7 @@
         android:layout_marginTop="8dp"
         android:fontFamily="@font/inter_bold"
         android:textStyle="italic"
-        android:text="Most things are not as bad as you think they are."
+        android:text="@string/message"
         android:textColor="@color/white"
         android:textSize="16sp"
         android:layout_marginStart="25dp"
@@ -79,7 +80,7 @@
             android:imeOptions="actionSearch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Search"
+            android:hint="@string/search"
             android:inputType="text" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -93,7 +94,8 @@
         android:layout_marginStart="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/textInputSearch"
         app:layout_constraintStart_toStartOf="@+id/textInputSearch"
-        app:layout_constraintTop_toTopOf="@+id/textInputSearch" />
+        app:layout_constraintTop_toTopOf="@+id/textInputSearch"
+        android:contentDescription="@string/cone_de_pesquisa" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/ConstraintFavorite"
@@ -106,14 +108,54 @@
         android:id="@+id/textViewFavorite"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:text="Favorite"
+        android:text="@string/favorite"
         android:fontFamily="@font/inter_bold"
+        android:textFontWeight="700"
         android:textColor="@color/purple"
         android:textSize="20sp"
         android:layout_marginTop="32dp"
-        android:layout_marginStart="28dp"
+        android:layout_marginStart="25dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/ConstraintFavorite"
         />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/image_recycleview"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textViewFavorite"
+        tools:listitem="@layout/item_image_favorite"
+        android:orientation="horizontal"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+
+    <TextView
+        android:id="@+id/textViewTypes"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:text="@string/types"
+        android:fontFamily="@font/inter_bold"
+        android:textColor="@color/purple"
+        android:textSize="20sp"
+        android:textFontWeight="700"
+        android:layout_marginTop="32dp"
+        android:layout_marginStart="25dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/image_recycleview" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerViewTypes"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:orientation="horizontal"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewTypes"
+        tools:listitem="@layout/item_image_types"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
