--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -17,6 +17,13 @@
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right"/>
+        <action
+            android:id="@+id/action_loginFragment_to_homeFragment"
+            app:destination="@id/homeFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
     </fragment>
 
     <fragment
@@ -37,6 +44,11 @@
         android:name="br.com.passwordkeeper.presentation.ui.fragment.SignUpCongratsFragment"
         android:label="SignUpCongratsFragment"
         tools:layout="@layout/sign_up_congrats_fragment"/>
+    <fragment
+        android:id="@+id/homeFragment"
+        android:name="br.com.passwordkeeper.presentation.ui.fragment.HomeFragment"
+        android:label="HomeFragment"
+        tools:layout="@layout/home_fragment"/>
 
 
 </navigation>
