--- a/app/src/main/res/layout/item_image_favorite.xml
+++ b/app/src/main/res/layout/item_image_favorite.xml
@@ -2,6 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_marginEnd="15dp">
 
     <com.google.android.material.imageview.ShapeableImageView
@@ -9,9 +11,9 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:scaleType="centerCrop"
+        tools:src="@drawable/image_example"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:shapeAppearanceOverlay="@style/roundedImage"
-        android:src="@drawable/image_example" />
+        app:shapeAppearanceOverlay="@style/roundedImage" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
