--- a/app/src/main/res/layout/item_image_types.xml
+++ b/app/src/main/res/layout/item_image_types.xml
@@ -1,75 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/constraint_item_type"
+    android:id="@+id/cardviewType"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/white">
+    android:layout_marginVertical="8dp"
+    android:layout_marginStart="25dp"
+    android:background="@color/white"
+    app:cardElevation="5dp"
+    app:cardCornerRadius="15dp">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardviewType"
-        android:layout_width="100dp"
-        android:layout_height="160dp"
-        android:layout_marginVertical="8dp"
-        android:layout_marginStart="25dp"
-        app:cardCornerRadius="15dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        <ImageView
+            android:id="@+id/imageViewType"
+            android:layout_width="65dp"
+            android:layout_height="70dp"
+            android:layout_marginStart="19dp"
+            android:layout_marginTop="18dp"
+            android:layout_marginEnd="18dp"
+            android:scaleType="centerCrop"
+            tools:src="@drawable/ic_stream"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
-                android:id="@+id/imageViewType"
-                android:layout_width="65dp"
-                android:layout_height="70dp"
-                android:layout_marginStart="19dp"
-                android:layout_marginTop="18dp"
-                android:layout_marginEnd="18dp"
-                android:scaleType="centerCrop"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:src="@drawable/ic_stream"/>
+        <TextView
+            android:id="@+id/textViewTextType"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:fontFamily="@font/inter_bold"
+            android:gravity="center"
+            android:textColor="@color/purple"
+            android:textFontWeight="300"
+            android:textSize="14sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageViewType"
+            tools:text="@string/text_type" />
 
-            <TextView
-                android:id="@+id/textViewTextType"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:fontFamily="@font/inter_bold"
-                android:gravity="center"
-                android:textColor="@color/purple"
-                android:textFontWeight="300"
-                android:textSize="14sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageViewType"
-                tools:text="@string/text_type" />
+        <TextView
+            android:id="@+id/textViewQuantity"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="15dp"
+            android:fontFamily="@font/inter_bold"
+            android:gravity="center"
+            android:textColor="@color/purple"
+            android:textFontWeight="700"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textViewTextType"
 
-            <TextView
-                android:id="@+id/textViewQuantity"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
-                android:fontFamily="@font/inter_bold"
-                android:gravity="center"
-                android:textColor="@color/purple"
-                android:textFontWeight="700"
-                android:textSize="12sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/textViewTextType"
-                tools:text="25" />
+            tools:text="25" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    </androidx.cardview.widget.CardView>
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
