--- a/app/src/main/res/layout/item_image_types.xml
+++ b/app/src/main/res/layout/item_image_types.xml
@@ -3,7 +3,7 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/cardviewType"
+    android:id="@+id/cardViewType"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginVertical="8dp"
@@ -25,6 +25,7 @@
             android:layout_marginEnd="18dp"
             android:scaleType="centerCrop"
             tools:src="@drawable/ic_stream"
+            android:contentDescription="@string/image_description_card_view_type"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -59,10 +60,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textViewTextType"
-
             tools:text="25" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 </androidx.cardview.widget.CardView>
