--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -67,7 +67,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="25dp"
                 android:fontFamily="@font/inter_light"
-                android:text="@string/message"
+                tools:text="@string/message"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:textStyle="italic"
