--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="purple">#4A148C</color>
     <color name="gray">#A7A7A7</color>
+    <color name="purple_light">#6014BD</color>
 
 </resources>
