--- a/app/src/main/res/layout/item_image_types.xml
+++ b/app/src/main/res/layout/item_image_types.xml
@@ -24,7 +24,7 @@
             android:layout_marginTop="18dp"
             android:layout_marginEnd="18dp"
             android:scaleType="centerCrop"
-            tools:src="@drawable/ic_stream"
+            tools:src="@drawable/ic_stream_type"
             android:contentDescription="@string/image_description_card_view_type"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
