--- a/app/src/main/res/layout/item_image_types.xml
+++ b/app/src/main/res/layout/item_image_types.xml
@@ -7,7 +7,8 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginVertical="8dp"
-    android:layout_marginStart="25dp"
+    android:layout_marginStart="20dp"
+    android:layout_marginEnd="10dp"
     android:background="@color/white"
     app:cardElevation="5dp"
     app:cardCornerRadius="15dp">
