--- a/app/src/main/res/layout/item_image_types.xml
+++ b/app/src/main/res/layout/item_image_types.xml
@@ -9,11 +9,13 @@
     android:layout_marginVertical="8dp"
     android:layout_marginStart="20dp"
     android:layout_marginEnd="10dp"
-    android:background="@color/white"
     app:cardElevation="5dp"
     app:cardCornerRadius="15dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:clickable="true"
+        android:focusable="true"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
