--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -3,6 +3,7 @@
     <array name="preloaded_fonts" translatable="false">
         <item>@font/inter</item>
         <item>@font/inter_bold</item>
+        <item>@font/inter_extrabold</item>
         <item>@font/inter_light</item>
     </array>
 </resources>
