--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/loginFragment">
+    app:startDestination="@id/signInFragment">
 
     <fragment
-        android:id="@+id/loginFragment"
-        android:name="br.com.passwordkeeper.presentation.ui.fragment.LoginFragment"
+        android:id="@+id/signInFragment"
+        android:name="br.com.passwordkeeper.presentation.ui.fragment.SignInFragment"
         android:label="LoginFragment"
         tools:layout="@layout/login_fragment">
         <action
